syntax = "proto2";
package raftpb;


enum EntryType {
    EntryNormal     = 0;
    EntryConfChange = 1;
}

message Entry {
    optional EntryType  entry_type  = 1; 
    optional uint64     term        = 2; 
    optional uint64     index       = 3; 
    optional bytes      data        = 4;
}

message SnapshotMetadata {
    optional ConfState conf_state = 1; 
    optional uint64    index      = 2; 
    optional uint64    term       = 3; 
}

message Snapshot {
    optional bytes            data     = 1;
    optional SnapshotMetadata metadata = 2;
}

enum MessageType {
    MsgHup                  = 0;
    MsgBeat                 = 1;
    MsgPropose              = 2;
    MsgAppend               = 3;
    MsgAppendResponse       = 4;
    MsgRequestVote          = 5;
    MsgRequestVoteResponse  = 6;
    MsgSnapshot             = 7;
    MsgHeartbeat            = 8;
    MsgHeartbeatResponse    = 9;
    MsgUnreachable          = 10;
    MsgSnapStatus           = 11;
    MsgCheckQuorum          = 12;
}

message Message {
    optional MessageType msg_type       = 1;  
    optional uint64      to             = 2;  
    optional uint64      from           = 3;  
    optional uint64      term           = 4;  
    optional uint64      log_term       = 5;  
    optional uint64      index          = 6;  
    repeated Entry       entries        = 7;  
    optional uint64      commit         = 8;  
    optional Snapshot    snapshot       = 9;  
    optional bool        reject         = 10; 
    optional uint64      reject_hint    = 11; 
}

message HardState {
    optional uint64 term   = 1; 
    optional uint64 vote   = 2; 
    optional uint64 commit = 3; 
}

message ConfState {
    repeated uint64 nodes = 1;
}

enum ConfChangeType {
    AddNode    = 0;
    RemoveNode = 1;
}

message ConfChange {
    optional uint64          id             = 1; 
    optional ConfChangeType  change_type    = 2; 
    optional uint64          node_id        = 3; 
    optional bytes           context        = 4;
}
